# bible-tui

./: Cargo.toml  README.md  build.rs
src/: action.rs  app.rs  event.rs  main.rs  tui.rs
src/bible/: canon.rs  loader.rs  mod.rs  model.rs  reference.rs
src/components/: command_palette.rs  help_overlay.rs  mod.rs  nav_panel.rs  reading_pane.rs  search_bar.rs  status_bar.rs
src/import/: json.rs  mod.rs  mybible.rs  zefania.rs
src/search/: index.rs
src/storage/: bookmark.rs  mod.rs  state.rs
src/ui/: layout.rs  mod.rs  theme.rs  wrap.rs
tools/: convert_hsv.py  peek_pdf.py
